# studytrack

./: .env  .env.example  Cargo.toml  docker-compose.yml
migrations/: 20260101193955_create_users_table.sql
src/: app.rs  config.rs  main.rs
src/http/: routes.rs
src/http/handlers/: users.rs
src/models/: user.rs
src/services/: user_service.rs
